--- a/config/locales/devise.hu.yml
+++ b/config/locales/devise.hu.yml
@@ -1,52 +1,93 @@
-# Additional translations at http://github.com/plataformatec/devise/wiki/I18n
-
 hu:
+  devise:
+    sign_in: Belépés
+    sign_up: Regisztráció
+    didnt_receive_confirmation_instructions: Didn't receive confirmation instructions?
+    didnt_receive_unlock_instructions: Didn't receive unlock instructions?
+    change_my_password: Jelszó megváltoztatása
+    change_your_password: Jelszó megváltoztatása
+    confirmations:
+      confirmed: 'Fiók megerősítve. Bejelentkezve a felhasználói fiókba.'
+      resend: Resend confirmation instructions
+      send_instructions: 'A megadott címre egy email érkezik a megerősítő linkkel.'
+      send_paranoid_instructions: 'Ha az email cím már létezik az adatbázisban, egy emailt küldtünk a további teendőkkel a fiók megerősítéséhez.'
+    failure:
+      already_authenticated: "You are already signed in."
+      inactive: 'A fiók még nincs aktiválva.'
+      invalid: 'Hibás email cím vagy jelszó.'
+      invalid_token: 'Hibás bejelentkező token.'
+      locked: 'A fiók zárolva lett.'
+      not_found_in_database: "Email vagy jelszó nem megfelelő"
+      timeout: 'A munkafolyamat lejárt. Újboli bejelentkezés szükséges.'
+      unauthenticated: 'A folytatáshoz bejelentkezés szükséges.'
+      unconfirmed: 'A folytatáshoz az email cím megerősítése szükséges.'
+    mailer:
+      confirmation_instructions:
+        subject: 'Email cím megerősítés'
+        welcome: Welcome %{email}
+        confirm_link: You can confirm your account through the link below
+        confirm_my_account: Confirm my account
+      reset_password_instructions:
+        link_to_change: Someone has requested a link to change your password, and you can do this through the link below.
+        subject: 'Jelszó megváltoztatása'
+        hello: Hello %{email}
+        if_you_didnt_request_this: If you didn't request this, please ignore this email.
+        your_password_wont_change_until: Your password won't change until you access the link above and create a new one.
+      unlock_instructions:
+        subject: 'Fiók zárolásának megszüntetése'
+    omniauth:
+      sign_in_with: 'Belépés %{kind}-n keresztül'
+    omniauth_callbacks:
+      failure: 'Nem sikerült azonosítani %{kind} fiókkal, az ok: "%{reason}".'
+      success: 'Sikeres azonosítás %{kind} fiókkal.'
+    passwords:
+      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
+      send_instructions: 'A megadott címre egy email érkezik hamarosan a további teendőkről.'
+      send_paranoid_instructions: "Ha az email cím már létezik az adatbázisban, egy jelszó-visszaállító emailt küldtünk a megadott címre."
+      updated: 'A jelszó megváltozott. Bejelentkezve a felhasználói fiókba'
+      updated_not_active: "Your password was changed successfully."
+      reset: Reset Password
+      forgot: Forgot Password
+      send_me_reset_email: Send me reset email
+      input_your_email: "Input your registered email address below to get reset password instructions:"
+    registrations:
+      cancel: Cancel my account
+      destroyed: 'Felhasználói fiók törölve. Reméljük, még visszatér hozzánk.'
+      edit: Edit %{name}
+      inactive_signed_up: 'Sikeres regisztráció, azonban még a bejelentkezés nem lehetséges, mert a felhasználói fiók %{reason}.'
+      leave_it_blank: (leave blank if you don't want to change it)
+      signed_up: 'Sikeres regisztráció.'
+      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
+      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
+      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please open the link to activate your account."
+      unhappy: Unhappy?
+      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address."
+      updated: 'Sikeres fiók módosítás.'
+      we_need_your_current: (we need your current password to confirm your changes)
+    sessions:
+      signed_in: 'Sikeres bejelentkezés.'
+      signed_out: 'A kijelentkezés sikeres.'
+      invalid: 'Invalid user or password'
+      login: 'Belépés'
+      forget: 'Elfelejtette a jelszavát?'
+      remember_me: 'emlékezzen rám'
+    unlocks:
+      send_instructions: 'Hamarosan a megadott címre érkezik egy email a fiók zárolásának megszüntetésével kapcsolatban.'
+      send_paranoid_instructions: 'Ha a fiók létezik, egy emailt küldtünk a további teendőkkel a fiók zárolásának megszüntetéséhez.'
+      unlocked: 'A felhasználói fiók zárolása megszűnt. Bejelentkezve a felhasználói fiókba.'
+      locked: Your account has been locked due to an excessive amount of unsuccessful sign in attempts.
+      hello: Hello %{email}
+      unlock_my_account: Unlock my account
+      click_to_unlock: "Click the link below to unlock your account:"
+      resend: Resend unlock instructions
+
   errors:
     messages:
       expired: "lejárt, igényelj egy újat"
+      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
       not_found: "nem található"
       already_confirmed: "már meg van erősítve"
       not_locked: "nincs zárolva"
       not_saved:
         one: "1 hiba miatt %{resource} mentése nem lehetséges:"
         other: "%{count} hiba miatt %{resource} mentése nem lehetésges:"
-
-  devise:
-    failure:
-      unauthenticated: 'A folytatáshoz bejelentkezés szükséges.'
-      unconfirmed: 'A folytatáshoz az email cím megerősítése szükséges.'
-      locked: 'A fiók zárolva lett.'
-      invalid: 'Hibás email cím vagy jelszó.'
-      invalid_token: 'Hibás bejelentkező token.'
-      timeout: 'A munkafolyamat lejárt. Újboli bejelentkezés szükséges.'
-      inactive: 'A fiók még nincs aktiválva.'
-    sessions:
-      signed_in: 'Sikeres bejelentkezés.'
-      signed_out: 'A kijelentkezés sikeres.'
-    passwords:
-      send_instructions: 'A megadott címre egy email érkezik hamarosan a további teendőkről.'
-      updated: 'A jelszó megváltozott. Bejelentkezve a felhasználói fiókba'
-      send_paranoid_instructions: "Ha az email cím már létezik az adatbázisban, egy jelszó-visszaállító emailt küldtünk a megadott címre."
-    confirmations:
-      send_instructions: 'A megadott címre egy email érkezik a megerősítő linkkel.'
-      send_paranoid_instructions: 'Ha az email cím már létezik az adatbázisban, egy emailt küldtünk a további teendőkkel a fiók megerősítéséhez.'
-      confirmed: 'Fiók megerősítve. Bejelentkezve a felhasználói fiókba.'
-    registrations:
-      signed_up: 'Sikeres regisztráció.'
-      inactive_signed_up: 'Sikeres regisztráció, azonban még a bejelentkezés nem lehetséges, mert a felhasználói fiók %{reason}.'
-      updated: 'Sikeres fiók módosítás.'
-      destroyed: 'Felhasználói fiók törölve. Reméljük, még visszatér hozzánk.'
-    unlocks:
-      send_instructions: 'Hamarosan a megadott címre érkezik egy email a fiók zárolásának megszüntetésével kapcsolatban.'
-      unlocked: 'A felhasználói fiók zárolása megszűnt. Bejelentkezve a felhasználói fiókba.'
-      send_paranoid_instructions: 'Ha a fiók létezik, egy emailt küldtünk a további teendőkkel a fiók zárolásának megszüntetéséhez.'
-    omniauth_callbacks:
-      success: 'Sikeres azonosítás %{kind} fiókkal.'
-      failure: 'Nem sikerült azonosítani %{kind} fiókkal, az ok: "%{reason}".'
-    mailer:
-      confirmation_instructions:
-        subject: 'Email cím megerősítés'
-      reset_password_instructions:
-        subject: 'Jelszó megváltoztatása'
-      unlock_instructions:
-        subject: 'Fiók zárolásának megszüntetése'
