Fixed misspelled i18n keys. This commit is cherry-picked from https://github.com/ari/jobsworth/commit/eae2aa36f030c1c00ae315620c1fab24e8a7c7bf This is a patch for digitalnatives/jobsworth, so that can avoid merge conflicts when merging upstream.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -356,7 +356,7 @@ en:
       add: 'Add %{model}'
     select:
       please_select: 'Please select'
-      none: 'none'
+      none: '[None]'
 
   error:
     user:
