--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,7 +9,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    -
+    - 
     - Jan
     - Feb
     - Mar
@@ -35,7 +35,7 @@ en:
       long: ! '%B %d, %Y'
       short: ! '%b %d'
     month_names:
-    -
+    - 
     - January
     - February
     - March
@@ -131,6 +131,14 @@ en:
       wrong_length:
         one: is the wrong length (should be 1 character)
         other: is the wrong length (should be %{count} characters)
+      already_confirmed: was already confirmed, please try signing in
+      confirmation_period_expired: needs to be confirmed within %{period}, please request a new one
+      expired: has expired, please request a new one
+      not_found: not found
+      not_locked: was not locked
+      not_saved:
+        one: ! '1 error prohibited this %{resource} from being saved:'
+        other: ! '%{count} errors prohibited this %{resource} from being saved:'
     template:
       body: ! 'There were problems with the following fields:'
       header:
@@ -150,6 +158,9 @@ en:
   boolean:
     true: true
     false: false
+    'false': false
+    'no': 
+    'true': true
   number:
     currency:
       format:
@@ -175,9 +186,9 @@ en:
           quadrillion: Quadrillion
           thousand: Thousand
           trillion: Trillion
-          unit:
+          unit: 
       format:
-        delimiter:
+        delimiter: 
         precision: 3
         significant: true
         strip_insignificant_zeros: true
@@ -193,10 +204,10 @@ en:
           tb: TB
     percentage:
       format:
-        delimiter:
+        delimiter: 
     precision:
       format:
-        delimiter:
+        delimiter: 
   support:
     array:
       last_word_connector: ! ', and '
@@ -297,11 +308,11 @@ en:
         task_record:
           attributes:
             task_number:
-              invalid: 'Invalid Task Number'
+              invalid: Invalid Task Number
         template:
           attributes:
             dependencies:
-              from_other_projects: 'are from other projects.'
+              from_other_projects: are from other projects.
     attributes:
       resource_type_id: Resource Type
       customer_id: Customer
@@ -401,7 +412,7 @@ en:
       not_exists_or_no_permission: You can't access the %{model} or it doesn't exist.
       model_closed: The %{model} is closed. Please reopen it first in order to modify it.
       model_delete: ! '%{model} deletion failed.'
-      model_update: "%{model} update failed."
+      model_update: ! '%{model} update failed.'
       pair_already_added: The pair (%{first}, %{second}) has already been added.
     notice:
       settings_updated: ! '%{model} settings updated'
@@ -508,7 +519,7 @@ en:
       add_me: Add me
       open: Open <b>%{task}</b>
       close: Close <b>%{task}</b>
-    depends_from: 'Depended on by'
+    depends_from: Depended on by
     index_title: Tasks - %{title}
     title: ! 'Task #%{num} : %{title}'
     icon_list: List
@@ -589,6 +600,7 @@ en:
     score_exponent: Exponent
     score_type: Type
     score_final_value: Final value
+    forecats_to_miss: 
   triggers:
     trigger_title: Triggers
     new_trigger_title: ! 'New Trigger : %{title}'
@@ -924,7 +936,7 @@ en:
     new_user: New user
     recent_work: Recent work
     next_tasks: Next Tasks
-    no_filters:
+    no_filters: 
     show_avatars: Show Avatars
   todos:
     delete_todo_html: Delete <b>%{todo}</b>
@@ -1110,7 +1122,7 @@ en:
     wiki_additions: Wiki Additions
     wiki_changes: Wiki Changes
     password_request: Resource Password Request
-    wiki_addictions:
+    wiki_addictions: 
   permissions:
     copy_permissions: Copy permissions from
     read: Read
@@ -1140,7 +1152,7 @@ en:
       resolved: Resolved
       updated: Updated
       comment: Comment
-      reverted:
+      reverted: 
       reassigned: Reassigned
     invalid_email: ! '%{prefix} invalid email'
     project: Project
@@ -1240,6 +1252,8 @@ en:
     unknown: Unknown
     worked_today: ! '%{time} worked today'
     yess: true
+    'true': true
+    'yes': 
   will_paginate:
     previous_label: ! '&#8592; Previous'
     next_label: Next &#8594;
@@ -1257,29 +1271,102 @@ en:
       multi_page_html: Displaying %{model} <b>%{from}&nbsp;-&nbsp;%{to}</b> of <b>%{count}</b> in total
   active_admin:
     batch_actions:
-      action_label:
-      button_label:
-      delete_confirmation:
-    clear_filters:
-    delete:
-    delete_confirmation:
+      action_label: ! '%{title} Selected'
+      button_label: Batch Actions
+      delete_confirmation: Are you sure you want to delete these %{plural_model}? You won't be able to undo this.
+      labels:
+        destroy: Delete
+      link: Create one
+      selection_toggle_explanation: (Toggle Selection)
+      succesfully_destroyed:
+        one: Successfully destroyed 1 %{model}
+        other: Successfully destroyed %{count} %{plural_model}
+    clear_filters: Clear Filters
+    delete: Delete
+    delete_confirmation: Are you sure you want to delete this?
     download: Download
-    edit:
-    equal_to:
-    filter:
-    greater_than:
-    less_than:
-    logout:
-    new_model:
+    edit: Edit
+    equal_to: Equal To
+    filter: Filter
+    greater_than: Greater Than
+    less_than: Less Than
+    logout: Logout
+    new_model: New %{model}
     pagination:
-      one_page:
-    powered_by:
-    search_field:
-    view:
-  delete_todo_html:
+      one_page: Displaying <b>all %{n}</b> %{model}
+      empty: No %{model} found
+      entry:
+        one: entry
+        other: entries
+      multiple: Displaying %{model} <b>%{from}&nbsp;-&nbsp;%{to}</b> of <b>%{total}</b> in total
+    powered_by: Powered by %{active_admin} %{version}
+    search_field: Search %{field}
+    view: View
+    access_denied:
+      message: You are not authorized to perform this action.
+    any: Any
+    blank_slate:
+      content: There are no %{resource_name} yet.
+      link: Create one
+    cancel: Cancel
+    comments:
+      add: Add Comment
+      author: Author
+      author_type: Author Type
+      body: Body
+      errors:
+        empty_text: Comment wasn't saved, text was empty.
+      no_comments_yet: No comments yet.
+      resource: Resource
+      resource_type: Resource Type
+      title: Comment
+      title_content: Comments (%{count})
+    create_model: New %{model}
+    dashboard: Dashboard
+    dashboard_welcome:
+      call_to_action: To add dashboard sections, checkout 'app/admin/dashboard.rb'
+      welcome: Welcome to Active Admin. This is the default dashboard page.
+    delete_model: Delete %{model}
+    details: ! '%{model} Details'
+    devise:
+      change_password:
+        submit: Change my password
+        title: Change your password
+      links:
+        forgot_your_password: Forgot your password?
+        sign_in: Sign in
+        sign_in_with_omniauth_provider: Sign in with %{provider}
+      login:
+        remember_me: Remember me
+        submit: Login
+        title: Login
+      reset_password:
+        submit: Reset My Password
+        title: Forgot your password?
+      unlock:
+        submit: Resend unlock instructions
+        title: Resend unlock instructions
+    edit_model: Edit %{model}
+    empty: Empty
+    has_many_delete: Delete
+    has_many_new: Add New %{model}
+    has_many_remove: Remove
+    index_list:
+      block: List
+      blog: Blog
+      grid: Grid
+      table: Table
+    main_content: Please implement %{model}#main_content to display content.
+    next: Next
+    previous: Previous
+    sidebars:
+      filters: Filters
+    update_model: Edit %{model}
+  delete_todo_html: 
   form:
     select:
-      please_select:
+      please_select: 
+      none: 
   locales:
     as_in_days: as in days
     as_in_hours: as in hours
@@ -1290,3 +1377,85 @@ en:
     same_as_in_english: Same as in English
     singular: Singular
     translate: Translate
+  devise:
+    change_my_password: Change my password
+    change_your_password: Change my password
+    confirmations:
+      confirmed: Your account was successfully confirmed. You are now signed in.
+      link: 
+      resend: Resend confirmation instructions
+      send_instructions: You will receive an email with instructions about how to confirm your account in a few minutes.
+      send_paranoid_instructions: If your email address exists in our database, you will receive an email with instructions about how to confirm your account in a few minutes.
+    didnt_receive_confirmation_instructions: Didn't receive confirmation instructions?
+    didnt_receive_unlock_instructions: Didn't receive unlock instructions?
+    failure:
+      already_authenticated: You are already signed in.
+      inactive: Your account was not activated yet.
+      invalid: Invalid email or password.
+      invalid_token: Invalid authentication token.
+      locked: Your account is locked.
+      not_found_in_database: Invalid email or password.
+      timeout: Your session expired, please sign in again to continue.
+      unauthenticated: You need to sign in or sign up before continuing.
+      unconfirmed: You have to confirm your account before continuing.
+    mailer:
+      confirmation_instructions: 
+      reset_password_instructions: 
+      unlock_instructions: 
+    omniauth:
+      sign_in_with: Sign in with %{kind}
+    omniauth_callbacks:
+      failure: Could not authenticate you from %{kind} because "%{reason}".
+      success: Successfully authenticated from %{kind} account.
+    passwords:
+      forgot: Forgot Password
+      input_your_email: ! 'Input your registered email address below to get reset password instructions:'
+      link: 
+      no_token: You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided.
+      reset: Reset Password
+      send_instructions: You will receive an email with instructions about how to reset your password in a few minutes.
+      send_me_reset_email: Send me reset email
+      send_paranoid_instructions: If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes.
+      updated: Your password was changed successfully. You are now signed in.
+      updated_not_active: Your password was changed successfully.
+    registrations:
+      cancel: Cancel my account
+      destroyed: Bye! Your account was successfully cancelled. We hope to see you again soon.
+      edit: Edit %{name}
+      inactive_signed_up: Sikeres regisztráció, azonban még a bejelentkezés nem lehetséges, mert a felhasználói fiók %{reason}.
+      leave_it_blank: (leave blank if you don't want to change it)
+      link: 
+      signed_up: Welcome! You have signed up successfully.
+      signed_up_but_inactive: You have signed up successfully. However, we could not sign you in because your account is not yet activated.
+      signed_up_but_locked: You have signed up successfully. However, we could not sign you in because your account is locked.
+      signed_up_but_unconfirmed: A message with a confirmation link has been sent to your email address. Please open the link to activate your account.
+      unhappy: Unhappy?
+      update_needs_confirmation: You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address.
+      updated: You updated your account successfully.
+      we_need_your_current: (we need your current password to confirm your changes)
+    sessions:
+      forget: Forget your password?
+      inactive: 
+      invalid: Invalid user or password
+      invalid_token: 
+      link: 
+      locked: 
+      login: Login
+      remember_me: remember me
+      signed_in: Signed in successfully.
+      signed_out: Signed out successfully.
+      timeout: 
+      unauthenticated: 
+      unconfirmed: 
+    sign_in: Sign in
+    sign_up: Sign up
+    unlocks:
+      click_to_unlock: ! 'Click the link below to unlock your account:'
+      hello: Hello %{email}
+      link: 
+      locked: Your account has been locked due to an excessive amount of unsuccessful sign in attempts.
+      resend: Resend unlock instructions
+      send_instructions: You will receive an email with instructions about how to unlock your account in a few minutes.
+      send_paranoid_instructions: If your account exists, you will receive an email with instructions about how to unlock it in a few minutes.
+      unlock_my_account: Unlock my account
+      unlocked: Your account has been unlocked successfully. Please sign in to continue.
