--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -34,7 +34,7 @@ hu:
       long: ! ' %Y %B %d'
       short: ! '%b %d'
     month_names:
-    - 
+    -
     - január
     - február
     - március
@@ -343,6 +343,8 @@ hu:
     no_one: Nincs
     no_time: nincs idő
     notifications: Értesítések
+    owners:
+      zero: 'Nincs felelős'
     project: Projekt
     reorder_task: újrarendezett feladat
     resolution: státusz
@@ -379,7 +381,7 @@ hu:
       add_me: saját felhasználó hozzáadása
       close: <b>%{task}</b> lezárása
       open: <b>%{task}</b> megnyitása
-    forecats_to_miss: 
+    forecats_to_miss:
     groupings:
       by_assigned: Hozzárendelt szerint csoportosítva
       by_client: Ügyfelek szerint csoportosítva
@@ -409,7 +411,7 @@ hu:
         destroy: Törlés
       link: Létrehozása
       selection_toggle_explanation: (Toggle Selection)
-      succesfully_destroyed: 
+      succesfully_destroyed:
     clear_filters: Szűrők törlése
     delete: Törlés
     delete_confirmation: Biztosan törölni akarja?
@@ -633,7 +635,7 @@ hu:
   form:
     select:
       please_select: Please select
-      none: 
+      none:
   locales:
     as_in_days: napokban
     as_in_hours: órákban
@@ -932,7 +934,7 @@ hu:
     'true': true
     unknown: ismeretlen
     week: Hét
-    'yes': 
+    'yes':
   signup:
     account_created: ! '%{user} létrehozta a felhasználói adatait a projekt managment rendszerben.'
     log_in_link: ! 'A továbbiakban ezen a linken keresztül éri el a rendszert: %{product}.'
@@ -1147,7 +1149,7 @@ hu:
     unassigned: Nincs hozzárendelve
   boolean:
     'false': false
-    'no': 
+    'no':
     'true': true
   devise:
     change_my_password: Jelszó megváltoztatása
